# sunpass_analytics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.serena/: project.yml
docs/superpowers/specs/: 2026-03-30-sunpass-scraper-design.md
src/sunpass/: config.py  main.py  plaza_coords.py
src/sunpass/db/: models.py  queries.py
src/sunpass/routes/: __init__.py  analytics.py  dashboard.py  map.py  settings.py  transactions.py  vehicles.py
src/sunpass/scraper/: auth.py  run.py  transactions.py  vehicles.py
src/sunpass/static/css/: style.css
src/sunpass/static/js/: charts.js
src/sunpass/templates/: analytics.html  base.html  dashboard.html  map.html  settings.html  transactions.html  vehicles.html
src/sunpass/templates/fragments/: scrape_status.html  transaction_table.html
tests/: conftest.py  test_db.py  test_routes.py  test_scraper.py
