[project]
name = "sunpass"
version = "0.1.0"
description = "SunPass toll data scraper and dashboard"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "aiosqlite>=0.20.0",
    "playwright>=1.48.0",
    "apscheduler>=3.10.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sunpass"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
